syntax = "proto3";

option csharp_namespace = "AElf.Network";

message Node {
    string IpAddress = 1;
}
